cabal-version:       3.0

name:                P3-CSharp
version:             0.1.0.0
author:              David
maintainer:          d.p.vanbalen@uu.nl
build-type:          Simple

executable starting-framework
  main-is:             Main.hs
  other-modules:
      CSharp.Algebra
    , CSharp.CodeGen
    , CSharp.AbstractSyntax
    , CSharp.Parser
    , CSharp.Analysis
    , SSM
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
      TupleSections
    , RecordWildCards
    , LambdaCase
  build-depends:
      base
    , containers
    , filepath
    , uu-tc-error-error >=0.2.0.0
    -- To turn on nice errors messages,
    -- invert comments for the two packages below
    , uu-tc >=2015
    -- , uu-tc-error >=0.3.0.0
